[gd_scene load_steps=4 format=3 uid="uid://weapon_hotbar"]

[ext_resource type="Script" path="res://ui/weapon_hotbar.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.5, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.5, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.5, 1)

[node name="WeaponHotbar" type="Control"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Slot1" type="Panel" parent="HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(80, 80)
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="Label" type="Label" parent="HBoxContainer/Slot1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1
Pistol"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot2" type="Panel" parent="HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(80, 80)
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="Label" type="Label" parent="HBoxContainer/Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "2
Rocket"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot3" type="Panel" parent="HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(80, 80)
theme_override_styles/panel = SubResource("StyleBoxFlat_3")

[node name="Label" type="Label" parent="HBoxContainer/Slot3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "3
Blocks"
horizontal_alignment = 1
vertical_alignment = 1
